[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/kasse.png" type="Texture" id=1]
[ext_resource path="res://components/CashRegister.gd" type="Script" id=2]
[ext_resource path="res://assets/recipe/recipe_number_3.png" type="Texture" id=3]
[ext_resource path="res://assets/recipe/recipe_number_2.png" type="Texture" id=4]
[ext_resource path="res://assets/recipe/recipe_number_5.png" type="Texture" id=5]
[ext_resource path="res://assets/recipe/recipe_number_4.png" type="Texture" id=6]
[ext_resource path="res://assets/recipe/recipe_number_7.png" type="Texture" id=7]
[ext_resource path="res://assets/recipe/recipe_number_1.png" type="Texture" id=8]
[ext_resource path="res://assets/recipe/recipe_number_8.png" type="Texture" id=9]
[ext_resource path="res://assets/recipe/recipe_number_6.png" type="Texture" id=10]
[ext_resource path="res://assets/recipe/recipe_number_9.png" type="Texture" id=11]
[ext_resource path="res://assets/recipe/recipe_number_0.png" type="Texture" id=12]

[node name="CashRegister" type="Node2D"]
script = ExtResource( 2 )

[node name="CashRegister" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Number1" type="Node2D" parent="."]
position = Vector2( 9, -42 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="number_0" type="Sprite" parent="Number1"]
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 12 )

[node name="number_1" type="Sprite" parent="Number1"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 8 )

[node name="number_2" type="Sprite" parent="Number1"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 4 )

[node name="number_3" type="Sprite" parent="Number1"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 3 )

[node name="number_4" type="Sprite" parent="Number1"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 6 )

[node name="number_5" type="Sprite" parent="Number1"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 5 )

[node name="number_6" type="Sprite" parent="Number1"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 10 )

[node name="number_7" type="Sprite" parent="Number1"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 7 )

[node name="number_8" type="Sprite" parent="Number1"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 9 )

[node name="number_9" type="Sprite" parent="Number1"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 11 )

[node name="Number2" type="Node2D" parent="."]
position = Vector2( -13, -42 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="number_0" type="Sprite" parent="Number2"]
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 12 )

[node name="number_1" type="Sprite" parent="Number2"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 8 )

[node name="number_2" type="Sprite" parent="Number2"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 4 )

[node name="number_3" type="Sprite" parent="Number2"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 3 )

[node name="number_4" type="Sprite" parent="Number2"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 6 )

[node name="number_5" type="Sprite" parent="Number2"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 5 )

[node name="number_6" type="Sprite" parent="Number2"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 10 )

[node name="number_7" type="Sprite" parent="Number2"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 7 )

[node name="number_8" type="Sprite" parent="Number2"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 9 )

[node name="number_9" type="Sprite" parent="Number2"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 11 )

[node name="Number3" type="Node2D" parent="."]
position = Vector2( -35, -42 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="number_0" type="Sprite" parent="Number3"]
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 12 )

[node name="number_1" type="Sprite" parent="Number3"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 8 )

[node name="number_2" type="Sprite" parent="Number3"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 4 )

[node name="number_3" type="Sprite" parent="Number3"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 3 )

[node name="number_4" type="Sprite" parent="Number3"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 6 )

[node name="number_5" type="Sprite" parent="Number3"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 5 )

[node name="number_6" type="Sprite" parent="Number3"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 10 )

[node name="number_7" type="Sprite" parent="Number3"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 7 )

[node name="number_8" type="Sprite" parent="Number3"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 9 )

[node name="number_9" type="Sprite" parent="Number3"]
visible = false
position = Vector2( 0.5, -0.5 )
texture = ExtResource( 11 )
